--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -59,8 +59,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="ProveedorId"
-                    android:textColor="#F8F5F5"
+                    android:text="1"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
@@ -75,13 +75,17 @@
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="ProveedorNombre" />
 
                 <TextView
                     android:id="@+id/item_bobina_txt_ProveedorNombre"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -93,13 +97,17 @@
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="Lote" />
 
                 <TextView
                     android:id="@+id/item_bobina_txt_Lote"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/black" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -111,12 +119,16 @@
                     android:id="@+id/textView10"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="Ancho" />
 
                 <TextView
                     android:id="@+id/item_bobina_txt_Ancho"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/black" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -128,12 +140,16 @@
                     android:id="@+id/textView11"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="TipoMaterialId" />
 
                 <TextView
                     android:id="@+id/item_bobina_txt_TipoMaterialId"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/black" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -145,12 +161,16 @@
                     android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="DefectuosaKg" />
 
                 <TextView
                     android:id="@+id/item_bobina_txt_DefectuosaKg"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/black" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -162,12 +182,16 @@
                     android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="EsAbiertaoCerrada" />
 
                 <TextView
                     android:id="@+id/item_bobina_txt_EsAbiertaoCerrada"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="1"
+                    android:textColor="@color/black" />
             </LinearLayout>
 
         </LinearLayout>
