--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -12,7 +12,7 @@
         android:layout_height="148dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/produccion_btn_bobina"></LinearLayout>
 
     <Button
         android:id="@+id/produccion_btn_scrap"
@@ -44,11 +44,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout5"
-        app:layout_constraintTop_toBottomOf="@+id/produccion_btn_bobina" />
+        app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
 
     <Button
         android:id="@+id/produccion_btn_cantidad"
@@ -66,13 +65,11 @@
         android:id="@+id/produccion_btn_bobina"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         android:text="Agregar Bobina"
         android:textSize="14sp"
         app:icon="@drawable/ic_agregar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/produccion_btn_finalziar"
