--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -8,20 +8,23 @@
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="225dp"
-        android:layout_height="148dp"
+        android:layout_width="600dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/produccion_bobina_recycler"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/produccion_btn_bobina"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 
     <Button
         android:id="@+id/produccion_btn_scrap"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="150dp"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Scrap"
-        android:textSize="14sp"
+        android:textSize="10sp"
         app:icon="@drawable/ic_agregar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,54 +45,60 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/produccion_bobina_recycler"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_finalziar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/linearLayout5"
-        app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
+        app:layout_constraintTop_toBottomOf="@+id/produccion_btn_bobina" />
 
     <Button
         android:id="@+id/produccion_btn_cantidad"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="150dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Agregar cantidad"
-        android:textSize="14sp"
+        android:textSize="10sp"
         app:icon="@drawable/ic_agregar"
         app:layout_constraintStart_toEndOf="@+id/linearLayout5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/produccion_btn_bobina"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="150dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="Agregar Bobina"
-        android:textSize="14sp"
+        android:textSize="10sp"
         app:icon="@drawable/ic_agregar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
 
     <Button
         android:id="@+id/produccion_btn_finalziar"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="FINALZIAR"
-        android:textSize="20sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/produccion_btn_cancelar"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         android:text="CANCELAR"
-        android:textSize="20sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
