--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -80,7 +80,7 @@
             android:layout_width="111dp"
             android:layout_height="88dp"
             android:layout_marginEnd="60dp"
-            android:entries="@android:array/organizationTypes"
+            android:entries="@array/UNIDADES"
             app:layout_constraintBottom_toBottomOf="@+id/et_numero"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cantidad_edt_nombreCantidad"
