--- a/app/src/main/res/layout/item_note_tareas.xml
+++ b/app/src/main/res/layout/item_note_tareas.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:id="@+id/layoutTareas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="150dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
